--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
    <title>Document</title>
    <script src="/socket.io/socket.io.js"></script>
    <script src="script.js"></script>
-   <!-- <link rel="stylesheet" href="style.css"> -->
+   <link rel="stylesheet" href="style.css">
 </head>
 <body>
    <div id="chat">
        <input type="text" placeholder="Enter messages" id="message">
-       <br>
+       <!-- <br> -->
        <button id="submit">Submit</button>
    </div>
 </body>
